--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^16.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^16.6.0",
+    "primeng": "^17.0.0-beta.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
