--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.1.0",
+    "quill": "2.0.0-rc.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
